test/sema/struct_resolution_error_keep_going.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    f: void,
}
// CHECK: [[# @LINE - 2 ]]:5: error: struct field cannot be void

struct S2 {
}

struct S3 {
}

struct S4 {
    f: void,
}
// CHECK: [[# @LINE - 2 ]]:5: error: struct field cannot be void

fn main() -> void {
}